--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/java-crud-sqlite-gui
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-0.8.1.jar=lib/jcalendar-0.8.1.jar
+file.reference.jcalendar-0.8.1.jar=lib\\jcalendar-0.8.1.jar
 file.reference.sqlite-jdbc-3.8.11.2.jar=lib\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
-    ${file.reference.jcalendar-0.8.1.jar}
+    ${file.reference.jcalendar-0.8.1.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=12
-javac.target=12
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -81,7 +81,7 @@ main.class=crud.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
